@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-30T00:53:50Z",
-  "count_outdated" : 1635,
-  "uniques_outdated" : 896,
+  "timestamp" : "2024-04-30T16:15:24Z",
+  "count_outdated" : 1638,
+  "uniques_outdated" : 898,
   "count" : 1647,
   "uniques" : 903,
   "clones" : [
-    {
-      "timestamp": "2024-04-16T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2024-04-17T00:00:00Z",
       "count": 2,
