@@ -1,12 +1,7 @@
 {
-  "count": 11,
-  "uniques": 5,
+  "count": 9,
+  "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-04-16T00:00:00Z",
-      "count": 2,
-      "uniques": 2
-    },
     {
       "timestamp": "2024-04-17T00:00:00Z",
       "count": 2,
